--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "simple-folder-tree",
-  "private": true,
+  "description": "A lightweight, modern, and customizable React folder tree component",
   "version": "0.0.0",
   "type": "module",
+  "author": {
+    "name": "Mohammad Nazari",
+    "email": "mohammadnazary2000@gmail.com",
+    "url": "https://github.com/nazari2079"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nazari2079/simple-folder-tree"
+  },
+  "bugs": {
+    "url": "https://github.com/nazari2079/simple-folder-tree/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -15,6 +27,10 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
