--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "format": "prettier src/**/* --write --ignore-unknown",
     "preview": "vite preview",
     "prepare": "husky install",
+    "commit": "cz",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
